--- a/templates/Admin/profil_down/card/menus/menus.html.twig
+++ b/templates/Admin/profil_down/card/menus/menus.html.twig
@@ -37,7 +37,7 @@
                         <div class="flex md:gap-8 gap-2">
                             <div class="flex sm-600:flex-row flex-col gap-2 flex-1">
                                 <div class="flex-1">
-                                    <label for="{{ 'title_'~ menu.id }}" hidden>{{ menu.title }}</label>
+                                    <label for="{{ 'title_'~ menu.id }}" hidden>Titre :</label>
                                     <input minLength=2 maxLength=150  required type="text" id="{{ 'title_'~ menu.id }}" name="{{ 'title_'~ menu.id }}" value="{{ menu.title }}" class="w-full pr-2 bg-primary/20 input_whitePlaceholder input_withoutIcon" value="{{ menu.title }}">
                                 </div>
                                 <div class="self-center flex gap-2">
