--- a/templates/Login/login.form.html.twig
+++ b/templates/Login/login.form.html.twig
@@ -33,9 +33,9 @@
                         <div class="form_inputContainer">
                             <i class="fa-solid fa-lock form_icon"></i>
                             <input type="password" id="password" name="_password">
-                            <span role="button" onclick="togglePassword(event)">
-                                <i class="fa-solid fa-eye w-[36px] hide" ></i>
-                                <i class="fa-solid fa-eye-slash w-[36px]"></i>
+                            <span role="button" onclick="togglePassword(event)" class="w-[36px]">
+                                <i class="fa-solid fa-eye hide button-full" ></i>
+                                <i class="fa-solid fa-eye-slash button-full"></i>
                             </span>
                         </div>
                     </div>
