--- a/templates/SignUp/form/signUp.form.html.twig
+++ b/templates/SignUp/form/signUp.form.html.twig
@@ -43,9 +43,9 @@
                             <div class="form_inputContainer">
                                 <i class="fa-solid fa-lock form_icon"></i>
                                 {{ form_widget(form.password) }}
-                                <span role="button" onclick="togglePassword(event)">
-                                    <i class="fa-solid fa-eye w-[36px] hide" ></i>
-                                    <i class="fa-solid fa-eye-slash w-[36px]"></i>
+                                <span role="button" onclick="togglePassword(event)" class="w-[36px]">
+                                    <i class="fa-solid fa-eye button-full hide" ></i>
+                                    <i class="fa-solid fa-eye-slash button-full"></i>
                                 </span>
                             </div>
                             <div>
@@ -57,9 +57,9 @@
                             <div class="form_inputContainer">
                                 <i class="fa-solid fa-lock form_icon"></i>
                                 {{ form_widget(form.confirm) }}
-                                <span role="button" onclick="togglePassword(event)">
-                                    <i class="fa-solid fa-eye hide w-[36px]"></i>
-                                    <i class="fa-solid fa-eye-slash w-[36px]"></i>
+                                <span role="button" onclick="togglePassword(event)" class="w-[36px]">
+                                    <i class="fa-solid fa-eye hide button-full"></i>
+                                    <i class="fa-solid fa-eye-slash button-full"></i>
                                 </span>                            
                             </div>
                             <div>
