--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -14,9 +14,9 @@
                 <div class="form_inputContainer form_icon">
                     <i class="fa-solid fa-lock"></i>
                     {{ form_widget(resetForm.plainPassword.first) }}
-                    <span role="button" onclick="togglePassword(event)">
-                        <i class="fa-solid fa-eye w-[36px] hide" ></i>
-                        <i class="fa-solid fa-eye-slash w-[36px]"></i>
+                    <span role="button" onclick="togglePassword(event)" class="w-[36px]">
+                        <i class="fa-solid fa-eye button-full hide" ></i>
+                        <i class="fa-solid fa-eye-slash button-full"></i>
                     </span>
                 </div>
                 <small class="form_error">
@@ -28,9 +28,9 @@
                 <div class="form_inputContainer form_icon">
                     <i class="fa-solid fa-lock"></i>
                     {{ form_widget(resetForm.plainPassword.second) }}
-                    <span role="button" onclick="togglePassword(event)">
-                        <i class="fa-solid fa-eye w-[36px] hide" ></i>
-                        <i class="fa-solid fa-eye-slash w-[36px]"></i>
+                    <span role="button" onclick="togglePassword(event)" class="w-[36px]">
+                        <i class="fa-solid fa-eye button-full hide" ></i>
+                        <i class="fa-solid fa-eye-slash button-full"></i>
                     </span>
                 </div>
                 <small class="form_error">
