--- a/templates/Admin/profil_down/schedules.html.twig
+++ b/templates/Admin/profil_down/schedules.html.twig
@@ -18,46 +18,54 @@
 									<div class="flex-1 flex justify-evenly">
 										<div class="flex flex-col gap-2">
 											<div class="">
-												<label hidden for="schedule_evening_start[hour][minute]">Début du service :</label>
+												<label hidden for="schedule_evening_start">Début du service :</label>
 												<div class="flex mx-auto max-w-[7.5rem]">
 													<i class="fa-solid fa-sun form_icon bg-primary/20"></i>
-													<input class="input_black input_withoutIcon p-0 sm:p-1" type="time" name="schedule_evening[start][hour][minute]" placeholder"hh:mm">
+													<input value="{{ day.eveningStart is empty ? "" : day.eveningStart|date('H:i', "Europe/Paris") }}" class="input_black input_withoutIcon p-0 sm:p-1" type="time" name="schedule_evening[start]" placeholder"hh:mm">
 												</div>
 											</div>
 											<div class="">
-												<label hidden for="schedule_evening_end[hour][minute]">Fin du service :</label>
+												<label hidden for="schedule_evening_end">Fin du service :</label>
 												<div class="flex mx-auto max-w-[7.5rem]">
 													<i class="fa-solid fa-sun form_icon bg-primary/20"></i>
-													<input class="input_black input_withoutIcon p-0 sm:p-1" type="time" name="schedule_evening[end][hour][minute]" placeholder"hh:mm">
+													<input value="{{ day.eveningEnd is empty ? "" : day.eveningEnd|date('H:i', "Europe/Paris") }}" class="input_black input_withoutIcon p-0 sm:p-1" type="time" name="schedule_evening[end]" placeholder"hh:mm">
 												</div>
 											</div>
 											<div class="flex gap-2 justify-center">
-												<input class="accent-red-500" type="checkbox" name="schedule[close]">
-												<label for="schedule_close">Fermer</label>
+												{% if day.eveningClose %}
+												<input class="accent-red-500" type="checkbox" name="schedule_evening[close]" checked>
+												{% else %}
+												<input class="accent-red-500" type="checkbox" name="schedule_evening[close]">
+												{% endif %}
+												<label for="schedule_evening_close">Fermer</label>
 											</div>
 										</div>
 										<div class="flex flex-col gap-2">
 											<div class="">
-												<label hidden for="schedule_noon_start[hour][minute]">Début du service :</label>
+												<label hidden for="schedule_noon_start">Début du service :</label>
 												<div class="flex mx-auto max-w-[7.5rem]">
 													<i class="fa-solid fa-moon form_icon bg-primary/20"></i>
-													<input class="input_black input_withoutIcon p-0 sm:p-1" type="time" name="schedule_noon[start][hour][minute]" placeholder"hh:mm">
+													<input value="{{ day.noonStart is empty ? "" : day.noonStart|date('H:i', "Europe/Paris") }}" class="input_black input_withoutIcon p-0 sm:p-1" type="time" name="schedule_noon[start]" placeholder"hh:mm">
 												</div>
 											</div>
 											<div class="">
 												<label hidden for="schedule_noon_end[hour][minute]">Fin du service :</label>
 												<div class="flex mx-auto max-w-[7.5rem]">
 													<i class="fa-solid fa-moon form_icon bg-primary/20"></i>
-													<input class="input_black input_withoutIcon p-0 sm:p-1" type="time" name="schedule_noon[end][hour][minute]" placeholder"hh:mm">
+													<input value="{{ day.noonEnd is empty ? "" : day.noonEnd|date('H:i', "Europe/Paris") }}" class="input_black input_withoutIcon p-0 sm:p-1" type="time" name="schedule_noon[end]" placeholder"hh:mm">
 												</div>
 											</div>
 											<div class="flex gap-2 justify-center">
-												<input class="accent-red-500" type="checkbox" name="schedule[close]">
-												<label for="schedule_close">Fermer</label>
+											{% if day.noonClose %}
+												<input class="accent-red-500" type="checkbox" name="schedule_noon[close]" checked >
+											{% else %}
+												<input class="accent-red-500" type="checkbox" name="schedule_noon[close]">
+											{% endif %}
+												<label for="schedule_noon_close">Fermer</label>
 											</div>
 										</div>
 									</div>
-									<input type="hidden" value="{{ day.id }}" name="schedule[day]">
+									<input type="hidden" value={{ day.id }} name="schedule[id]">
 									{# <input type="hidden" value="evening" name="schedule[time]"> #}
 								</div>
 								<button type="submit" class="bg-primary px-4 py-2 w-fit mx-auto mt-4">Modifier les horaires</button>
