feat: modify all the days at once

--- a/templates/Admin/profil.html.twig
+++ b/templates/Admin/profil.html.twig
@@ -71,5 +71,8 @@
 	{% endif %}
 	{% if page_down == 'carousel' %}
 	<script src={{ asset('js/profil/'~'handleRequest.carousel.js') }}></script>
+	{% elseif page_down == 'horaires' %}
+	<script src={{ asset('js/profil/'~'handleRequest.schedules.js') }}></script>
+
 	{% endif %}
 {% endblock %}
