--- a/templates/Admin/profil_down/schedules.html.twig
+++ b/templates/Admin/profil_down/schedules.html.twig
@@ -1,6 +1,6 @@
 <div class="text-secondary bg-500">
 	<div class="drop-shadow-lg bg-400/20">
-		<section class="py-6 relative" id="schedules">
+		<section class="py-6" id="schedules">
 			<ol id="days" class="flex flex-col gap-8">
 				{% set frenchDays = ['Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi', 'Dimanche'] %}
 				{% for key, day in schedules %}
