--- a/templates/Admin/profil_down/carousel.html.twig
+++ b/templates/Admin/profil_down/carousel.html.twig
@@ -1,7 +1,7 @@
 <div class="text-secondary bg-600">
     <div class="drop-shadow-lg">
         <section class="after py-6 relative">
-            <p class="w-11/12 mx-auto max-w-[598px] pb-3">Ajouter une photo :</p>
+            <p class="w-11/12 mx-auto max-w-[598px] pb-3 underline underline-offset-2">Ajouter une photo :</p>
             {{ form_start(form_image, { 'attr' : { 'class' :'w-11/12 mx-auto max-w-[598px]'}})}}
             <div class="lg:flex lg:justify-between">
                 <div class="pb-2 relative">
