--- a/templates/Admin/profil_down/schedules.html.twig
+++ b/templates/Admin/profil_down/schedules.html.twig
@@ -8,7 +8,7 @@
 						<h3 class="text-center m-4 after after:bg-secondary/50 relative">{{ frenchDays[key] }}</h3>
 						<div class="flex flex-col gap-2">
 							<form action="" method="POST" class="text-sm sm:text-base flex flex-col">
-								<div class="relative after flex justify-evenly gap-4after pb-4 after:bg-secondary/50">
+								<div class="relative after flex justify-evenly pb-4 after:bg-secondary/50">
 									<div class="flex flex-col gap-3">
 										<p class="hidden sm-600:block pt-2">Ouverture :</p>
 										<i class="before:pr-2 pt-3 fa-solid fa-lock-open">:</i>
