--- a/templates/Admin/profil_down/dates.html.twig
+++ b/templates/Admin/profil_down/dates.html.twig
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-
+                <button type="submit" class="bg-primary/50 px-4 py-2 mt-4 relative left-1/2 -translate-x-1/2">Ajouter une nouvelle date</button>
             {{ form_end(form_dates) }}
         </section>
     </div>
