--- a/templates/Admin/profil_down/schedules.html.twig
+++ b/templates/Admin/profil_down/schedules.html.twig
@@ -65,8 +65,7 @@
 											</div>
 										</div>
 									</div>
-									<input type="hidden" value={{ day.id }} name="schedule[id]">
-									{# <input type="hidden" value="evening" name="schedule[time]"> #}
+									<input type="hidden" value={{ day.id }} name="schedule[id_schedule]">
 								</div>
 								<button type="submit" class="bg-primary px-4 py-2 w-fit mx-auto mt-4">Modifier les horaires</button>
 							</form>
